--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,13 @@ services:
       # URLs (required)
       FRONTEND_URL: ${FRONTEND_URL:-http://localhost:3001}
       API_URL: ${API_URL:-http://localhost:3000}
+      # Stripe Configuration (optional in development, required in production)
+      # STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      # STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
+      # STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      # STRIPE_PRICE_STANDARD: ${STRIPE_PRICE_STANDARD}
+      # STRIPE_PRICE_PROFESSIONAL: ${STRIPE_PRICE_PROFESSIONAL}
+      # STRIPE_PRICE_ADVANCED: ${STRIPE_PRICE_ADVANCED}
     volumes:
       - ./api:/app
       - /app/node_modules
