--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.4.20",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.4.20",
