--- a/admin/package.json
+++ b/admin/package.json
@@ -11,14 +11,24 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@microlink/react-json-view": "^1.27.0",
+    "@refinedev/antd": "^5.43.0",
     "@refinedev/core": "^4.54.0",
     "@refinedev/nextjs-router": "^6.2.0",
     "@refinedev/simple-rest": "^5.0.8",
-    "@refinedev/antd": "^5.43.0",
+    "@tanstack/react-query": "^5.90.7",
+    "@types/js-cookie": "^3.0.6",
     "antd": "^5.21.6",
+    "framer-motion": "^12.23.24",
+    "js-cookie": "^3.0.5",
     "next": "14.2.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.66.0",
+    "react-query": "^3.39.3",
+    "recharts": "^3.3.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,4 +37,3 @@
     "typescript": "^5"
   }
 }
-
