--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hummii-frontend",
+  "name": "hummii-design-system",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,25 +11,17 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@tanstack/react-query": "^5.59.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "^16.0.0",
-    "next-intl": "^4.4.0",
+    "next-intl": "^4.5.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.53.0",
-    "socket.io-client": "^4.7.5",
-    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.59.0",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
