--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "generate:css": "tsx scripts/generate-css-vars.ts",
+    "predev": "npm run generate:css",
+    "prebuild": "npm run generate:css",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -31,6 +34,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.0.0"
   }
